Fix legend item spacing on iOS 8 Safari
Older browsers such as iOS 8 Safari needs vendor prefixes for
flexbox.  I enabled autoprefixer in the Webpack configuration to
specify the needed vendor prefixes.

I also needed to remove the inline-block display on the legend
items for this to look right.

--- a/src/components/StatusChartLegend.css
+++ b/src/components/StatusChartLegend.css
@@ -9,7 +9,6 @@
 }
 
 .item {
-  display: inline-block;
   margin-bottom: 0.2em;
 }
 
